--- a/pages/home.html
+++ b/pages/home.html
@@ -13,6 +13,34 @@
     <form action="">
         <input id="m" autocomplete="off" /><button>Send</button>
     </form>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    <script>
+        $(function () {
+            //establish a connection with the server
+            var socket = io();
+            //grab the form element on the page
+            //This should be done with an ID ideally, incase you have multiple forms on a page
+            //When we submit the form, call a function
+            $('form').submit(function (e) {
+                //doesn't reload the page
+                e.preventDefault();
+                //emit an event that the server can recieve
+                //and pass in the value of the form input
+                socket.emit('chatMessage', $('#m').val());
+                //set the value of the input to blank to clear it
+                $('#m').val('');
+                //not sure wtf the point of this is, might be
+                //required for a function like this?
+                return false;
+            });
+            //On the client side, when we recieve a message event, add it as a list item which will display it to everyone.
+            socket.on('message', function (msg) {
+                $('#messages').append($('<li>').text(msg));
+            });
+        });
+    </script>
 </body>
 
 </html>
